--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+			</style>
 	</head>
 	<body class="is-preload">
 
