--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Zajmujemy się pięknem. Pięknem, które pozwala każdemu wyrażać siebie, budować poczucie własnej wartości i otwierać się na innych. 
 									Piękno to uniwersalny środek wyrazu.</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Taka sobie zmiana</p>
 							</article>
 
 						<!-- Work -->
